Remove fixed footer on mobile

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -194,14 +194,11 @@ small {
   min-height: #{2 * $spacing-unit};
   padding: 1.8125rem #{1.5 * $spacing-unit};
   color: $color-white;
-  background-color: $color-primary-dark;
+  background-color: $color-black;
   font-family: $heading-ff;
   font-size: .75 * $base-fz;
   font-weight: 400;
   line-height: $subheading-lh;
-  @include largeScreen() {
-    background-color: $color-black;
-  }
 
   & a {
     color: $color-white;
